--- a/v8/CR789393.md
+++ b/v8/CR789393.md
@@ -1,5 +1,8 @@
 # CR 789393
 
+- Report: Nov 2017
+- Fix: Dec 2017
+- Credit: lokihardt of Google Project Zero
 
 ## POC
 ```javascript
@@ -28,5 +31,5 @@ trigger();
 ```
 
 ## Reference
-https://bugs.chromium.org/p/chromium/issues/detail?id=789393
-https://github.com/theori-io/zer0con2018_bpak
+- [Issue](https://bugs.chromium.org/p/chromium/issues/detail?id=789393)
+- [ZeroCon (Brian Pak)](https://github.com/theori-io/zer0con2018_bpak)
